[gd_scene load_steps=12 format=2]

[ext_resource path="res://MazeOne.tscn" type="PackedScene" id=1]
[ext_resource path="res://cube.tscn" type="PackedScene" id=2]
[ext_resource path="res://default_env.tres" type="Environment" id=3]
[ext_resource path="res://Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Key.tscn" type="PackedScene" id=5]
[ext_resource path="res://Finish.gd" type="Script" id=6]
[ext_resource path="res://1.gd" type="Script" id=7]
[ext_resource path="res://MazeTwo.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3.97482, 1, 1 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.90679, 1, 0.439897 )

[node name="Spatial" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.84013, 0 )

[node name="cubewalk" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.498347, 0, -0.0406213, 0, 0.5, 0, 0.0406213, 0, -0.498347, -4.33508, 1.88272, -2.1685 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.49647, 0.808369, -0.316317, 0.716213, 0.587354, 0.376901, 0.490465, -0.0394307, -0.870568, 0, 1, -10.217 )
light_energy = 0.32
light_indirect_energy = 2.03
light_specular = 0.25
shadow_enabled = true
shadow_bias = 0.0
shadow_reverse_cull_face = true
directional_shadow_mode = 1
directional_shadow_split_1 = 0.197
directional_shadow_split_2 = 0.34
directional_shadow_split_3 = 0.455
directional_shadow_normal_bias = 0.0
directional_shadow_bias_split_scale = 0.14
directional_shadow_depth_range = 1
directional_shadow_max_distance = 16.6

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="MazeOne" parent="." instance=ExtResource( 1 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="door" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.3783, 1.22724, 12.7212 )

[node name="door2" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -3.86122e-07, 0, 1, 0, 3.25841e-07, 0, -1.185, 5.08805, 1.22724, 7.04244 )

[node name="door3" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -3.86122e-07, 0, 1, 0, 3.25841e-07, 0, -1.185, 21.6067, 1.53323, -23.875 )

[node name="door4" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -3.86122e-07, 0, 1, 0, 3.25841e-07, 0, -1.185, 28.9538, 1.53323, -23.6921 )

[node name="door5" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.00664961, 0, -1.18497, 0, 1, 0, 0.999978, 0, -0.00787979, -78.0161, 1.53323, 13.8173 )

[node name="door6" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.00664961, 0, -1.18497, 0, 1, 0, 0.999978, 0, -0.00787979, -84.0303, 1.53323, 1.73746 )

[node name="door7" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.00664961, 0, -1.18497, 0, 1, 0, 0.999978, 0, -0.00787979, -47.9108, 1.53323, -20.5604 )

[node name="key" parent="." instance=ExtResource( 5 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 15.4883, -0.84862, 14.1608 )

[node name="key3" parent="." instance=ExtResource( 5 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0.731115, -0.575762, -16.9572 )

[node name="key4" parent="." instance=ExtResource( 5 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -42.0213, -0.339614, 29.0494 )

[node name="key5" parent="." instance=ExtResource( 5 )]
transform = Transform( -0.0602996, 0, -4.99964, 0, 5, 0, 4.99964, 0, -0.0602996, -95.6479, -0.575762, 4.47044 )

[node name="key6" parent="." instance=ExtResource( 5 )]
transform = Transform( 4.18134, 0, -2.74161, 0, 5, 0, 2.74161, 0, 4.18134, -58.1285, -0.575762, -21.3456 )

[node name="key2" parent="." instance=ExtResource( 5 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -4.36664, -1.80348, 23.2674 )

[node name="Finish" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.72318, 24.0035, 0.348359, -24.0469 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Finish"]
transform = Transform( 1.08132, 0, 0, 0, 1.08132, 0, 0, 0, 1, 2.086, 0, 0 )
shape = SubResource( 1 )

[node name="Finish2" type="Area" parent="."]
transform = Transform( -0.0266831, 0, -1.72257, 0, 1, 0, 0.999644, 0, -0.0459797, -48.0843, 0.348359, -25.5522 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Finish2"]
transform = Transform( 1.08132, 0, 3.72529e-09, 0, 1.08132, 0, 0, 0, 1, -0.0644035, 0, 0.0333099 )
shape = SubResource( 1 )

[node name="1" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.0672, 0, -2.15678 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="1"]
shape = SubResource( 2 )

[node name="2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.0672, 0, 12.2704 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="2"]
shape = SubResource( 2 )

[node name="3" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.35696, 0, 17.6696 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="3"]
shape = SubResource( 2 )

[node name="4" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.35696, 0, 22.7706 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="4"]
shape = SubResource( 2 )

[node name="MazeTwo" parent="." instance=ExtResource( 8 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -92.126, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="MazeTwo"]

[node name="CollisionShape" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.97518, 1.47613, 12.8875 )
shape = SubResource( 3 )

[node name="CollisionShape3" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.0394, 1.47613, -0.165761 )
shape = SubResource( 3 )

[node name="CollisionShape17" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.8137, 2.52368, 2.82227 )
shape = SubResource( 3 )

[node name="CollisionShape5" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.8029, 1.89517, -6.15247 )
shape = SubResource( 3 )

[node name="CollisionShape19" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.7141, 1.89517, -6.15247 )
shape = SubResource( 3 )

[node name="CollisionShape20" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.000261947, 0, -1, 0, 1, 0, 1, 0, -0.000261947, 23.4819, 1.89517, -4.45392 )
shape = SubResource( 3 )

[node name="CollisionShape21" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.000261947, 0, -1, 0, 1, 0, 1, 0, -0.000261947, 23.4819, 1.89517, -8.75496 )
shape = SubResource( 3 )

[node name="CollisionShape6" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.1387, 1.47613, -9.17144 )
shape = SubResource( 3 )

[node name="CollisionShape7" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.10894, 1.47613, -9.17144 )
shape = SubResource( 3 )

[node name="CollisionShape22" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 0.00926751, 0, -0.999957, 0, 1, 0, 0.999957, 0, 0.00926751, -3.53868, 1.47613, -9.88794 )
shape = SubResource( 3 )

[node name="CollisionShape8" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.10894, 1.47613, -12.2401 )
shape = SubResource( 3 )

[node name="CollisionShape23" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.39378, 1.47613, -12.2401 )
shape = SubResource( 3 )

[node name="CollisionShape9" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.0200526, 0, -0.999799, 0, 1, 0, 0.999799, 0, -0.0200526, 48.5876, 2.62484, 2.49579 )
shape = SubResource( 3 )

[node name="CollisionShape10" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.0200526, 0, -0.999799, 0, 1, 0, 0.999799, 0, -0.0200526, 51.4914, 2.62484, 2.59981 )
shape = SubResource( 3 )

[node name="CollisionShape12" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.0200526, 0, -0.999799, 0, 1, 0, 0.999799, 0, -0.0200526, 51.4914, 2.62484, -1.26371 )
shape = SubResource( 3 )

[node name="CollisionShape13" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.0200526, 0, -0.999799, 0, 1, 0, 0.999799, 0, -0.0200526, 48.5663, 2.62484, -1.26371 )
shape = SubResource( 3 )

[node name="CollisionShape14" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.0200526, 0, -0.999799, 0, 1, 0, 0.999799, 0, -0.0200526, 48.5663, 2.62484, -2.67987 )
shape = SubResource( 3 )

[node name="CollisionShape15" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.0200526, 0, -0.999799, 0, 1, 0, 0.999799, 0, -0.0200526, 51.7249, 2.62484, -2.85703 )
shape = SubResource( 3 )

[node name="CollisionShape16" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.999947, 0, 0.0102799, 0, 1, 0, -0.0102799, 0, -0.999947, 50.2538, 2.62484, -7.30165 )
shape = SubResource( 3 )

[node name="CollisionShape11" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.999899, 0, 0.0141891, 0, 1, 0, -0.0141891, 0, -0.999899, 50.0649, 2.62484, 5.12823 )
shape = SubResource( 3 )

[node name="CollisionShape4" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 0.032248, 0, -0.99948, 0, 1, 0, 0.99948, 0, 0.032248, 23.2894, 1.47613, -0.16576 )
shape = SubResource( 3 )

[node name="CollisionShape18" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.999905, 0, 0.0138228, 0, 1, 0, -0.0138228, 0, -0.999905, 21.0345, 2.21401, -3.25554 )
shape = SubResource( 3 )

[node name="CollisionShape24" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( -0.999905, 0, 0.0138228, 0, 1, 0, -0.0138228, 0, -0.999905, 16.4809, 2.21401, -3.25554 )
shape = SubResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="MazeTwo/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.97518, 1.47613, 15.4465 )
shape = SubResource( 3 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 250, 200 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 4.88762e-07, 1, 5.30863e-14, -1.62921e-07, 2.65431e-14, 1, 1, -4.88762e-07, 1.62921e-07, 11.693, 38.268, -1.556 )
cull_mask = 1048571
projection = 1
current = true
size = 45.0
near = 18.17
far = 31.0

[node name="Camera2" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1.19249e-08, 1, 1.62921e-07, 0, -1.62921e-07, 1, 1, -1.19249e-08, -1.94281e-15, -70.245, 38.268, 3.267 )
cull_mask = 1048571
projection = 1
size = 65.0
near = 15.79
far = 32.0
[connection signal="body_entered" from="Finish" to="Finish" method="_on_Finish_body_entered" flags=3]
[connection signal="body_entered" from="Finish2" to="Finish2" method="_on_Finish_body_entered" flags=3]
[connection signal="body_entered" from="1" to="1" method="_on_1_body_entered" flags=3]
[connection signal="body_entered" from="2" to="2" method="_on_2_body_entered" flags=3]
[connection signal="body_entered" from="3" to="3" method="_on_3_body_entered" flags=3]
[connection signal="body_entered" from="4" to="4" method="_on_4_body_entered" flags=3]
